Update popup styles and HTML structure: Restore button border-radius, adjust submit button font size, and refine layout of sidebar flow toggle for improved alignment and spacing. Enhance file upload button styling with margin adjustments.

--- a/src/popup/popup.html
+++ b/src/popup/popup.html
@@ -436,7 +436,7 @@
             <button
               type="button"
               id="enable-file-upload-btn"
-              class="enable-file-upload-btn d-none"
+              class="enable-file-upload-btn d-none mt-10"
             >
               📁 Enable File Upload
             </button>
@@ -550,9 +550,9 @@
       </div>
 
       <!-- SIDEBAR FLOW TOGGLE -->
-      <div class="control-group align-center justify-start mb-5">
+      <div class="control-group align-center justify-between mb-5">
         <label for="sidebar-flow" class="fw-200 fs-095rem">Sidebar Flow:</label>
-        <label for="sidebar-flow" class="switch ml-5">
+        <label for="sidebar-flow" class="switch mr-15">
           <input type="checkbox" id="sidebar-flow" checked />
           <div class="slider round"></div
         ></label>
