Enhance popup toggle functionality: Add no-transition class to slider elements for loading. Update JavaScript to remove the no-transition class after a brief delay, ensuring a seamless user experience when toggling switches.

--- a/src/popup/popup.html
+++ b/src/popup/popup.html
@@ -85,7 +85,7 @@
             <label for="bg-color-fade" class="fw-300 fs-09rem">Fade:</label>
             <label for="bg-color-fade" class="switch medium-switch mt-5">
               <input type="checkbox" id="bg-color-fade" checked />
-              <div class="slider round"></div
+              <div class="slider no-transition round"></div
             ></label>
           </div>
         </div>
@@ -235,7 +235,7 @@
                   class="switch medium-switch mt-5"
                 >
                   <input type="checkbox" id="bg-gradient-scroll-L" checked />
-                  <div class="slider round"></div
+                  <div class="slider no-transition round"></div
                 ></label>
               </div>
 
@@ -249,7 +249,7 @@
                   class="switch medium-switch mt-5"
                 >
                   <input type="checkbox" id="bg-gradient-fade-L" checked />
-                  <div class="slider round"></div
+                  <div class="slider no-transition round"></div
                 ></label>
               </div>
             </div>
@@ -360,7 +360,7 @@
                   class="switch medium-switch mt-5"
                 >
                   <input type="checkbox" id="bg-gradient-scroll-R" checked />
-                  <div class="slider round"></div
+                  <div class="slider no-transition round"></div
                 ></label>
               </div>
 
@@ -374,7 +374,7 @@
                   class="switch medium-switch mt-5"
                 >
                   <input type="checkbox" id="bg-gradient-fade-R" checked />
-                  <div class="slider round"></div
+                  <div class="slider no-transition round"></div
                 ></label>
               </div>
             </div>
@@ -478,7 +478,7 @@
                   id="bg-image-scroll"
                   class="ml-15"
                   checked />
-                <div class="slider round"></div
+                <div class="slider no-transition round"></div
               ></label>
             </div>
 
@@ -494,7 +494,7 @@
                   id="bg-image-fade"
                   class="ml-15"
                   checked />
-                <div class="slider round"></div
+                <div class="slider no-transition round"></div
               ></label>
             </div>
 
@@ -510,7 +510,7 @@
                   id="bg-image-flow"
                   class="ml-15"
                   checked />
-                <div class="slider round"></div
+                <div class="slider no-transition round"></div
               ></label>
             </div>
           </div>
@@ -554,7 +554,7 @@
         <label for="sidebar-flow" class="fw-200 fs-095rem">Sidebar Flow:</label>
         <label for="sidebar-flow" class="switch mr-15">
           <input type="checkbox" id="sidebar-flow" checked />
-          <div class="slider round"></div
+          <div class="slider no-transition round"></div
         ></label>
       </div>
 
