Refactor DragScroll functionality: Update scroll intervals and distance coefficients for improved performance, add double-click event listener for drag start, and streamline drag state management. Enhance popup HTML to clarify drag scroll toggle functionality.

--- a/src/popup/popup.html
+++ b/src/popup/popup.html
@@ -568,7 +568,9 @@
 
       <!-- DRAG SCROLL TOGGLE -->
       <div class="control-group align-center justify-between mb-5">
-        <label for="drag-scroll" class="fw-200 fs-095rem">Drag Scroll:</label>
+        <label for="drag-scroll" class="fw-200 fs-095rem"
+          >Auto Scroll: <small class="fw-200 fs-08rem ml-5">(Drag or Double Click)</small></label
+        >
         <label for="drag-scroll" class="switch mr-15">
           <input type="checkbox" id="drag-scroll" checked />
           <div class="slider no-transition round"></div
