Enhance DragScroll class: Implement pause and unpause functionality for auto-scrolling, improve key event handling for arrow keys and spacebar, and refine drag event management. Update popup styles and HTML for better user experience and clarity in customization controls.

--- a/src/popup/popup.html
+++ b/src/popup/popup.html
@@ -25,7 +25,7 @@
       <h1 class="bungee-spice-regular">Reddit Web Fix</h1>
 
       <!-- SUBTITLE -->
-      <h3 class="fw-100">Customize Experience</h3>
+      <h3 class="fw-100">Customization Controls</h3>
 
       <!-- BACKGROUND TYPE SELECTOR -->
       <div class="control-group align-start">
